adjust button sizes

--- a/index.html
+++ b/index.html
@@ -35,12 +35,6 @@
       <div class="section">
         <h3 class="header center-align unselectable">Codify</h3>
 
-        <!-- <div class="center-align">
-          <a class="waves-effect waves-light btn-large orange" id="showButton"
-            >Show</a
-          >
-        </div> -->
-
         <div class="row">
           <div class="col s8 push-s2">
             <div class="card blue-grey">
@@ -58,7 +52,7 @@
               <div class="card-action">
                 <div class="center-align">
                   <a
-                    class="waves-effect waves-orange btn blue-grey"
+                    class="waves-effect waves-orange btn-large blue-grey"
                     id="codifyButton"
                     >Begin</a
                   >
@@ -75,13 +69,13 @@
         <h3 class="header center-align unselectable">Transcribe</h3>
 
         <div class="row">
-          <div class="col s3 l2">
+          <div class="col s4 l2">
             <a class="waves-effect waves-light btn-large orange" id="readButton"
               >Read</a
             >
           </div>
 
-          <div class="col s3">
+          <div class="col s4">
             <p class="center-align">Speed: <pp id="speedValue"></pp></p>
             <p class="range-field">
               <input
@@ -94,7 +88,7 @@
             </p>
           </div>
 
-          <div class="col s3">
+          <div class="col s4">
             <p class="center-align">Length: <pp id="lengthValue"></pp></p>
             <p class="range-field">
               <input type="range" id="lengthSlider" min="1" max="20" step="1" />
