--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div class="row">
           <div class="col s8 push-s2">
-            <div class="card blue-grey">
+            <div class="card blue-grey" id="codifyCard">
               <div class="card-content white-text center-align">
                 <div id="intro">
                   <span class="card-title">Practice</span>
