--- a/index.html
+++ b/index.html
@@ -72,13 +72,18 @@
         <h3 class="header center-align unselectable">Transcribe</h3>
 
         <div class="row">
-          <div class="col s4 l2">
+          <div class="col s3 l2">
             <a class="waves-effect waves-light btn-large orange" id="readButton"
-              >Read</a
+              >Next</a
+            >
+          </div>
+          <div class="col s3 l2">
+            <a class="waves-effect waves-light btn-large orange darken-2" id="repeatButton"
+              >Repeat</a
             >
           </div>
 
-          <div class="col s4">
+          <div class="col s3 l4">
             <p class="center-align">Speed: <pp id="speedValue"></pp></p>
             <p class="range-field">
               <input
@@ -91,7 +96,7 @@
             </p>
           </div>
 
-          <div class="col s4">
+          <div class="col s3 l4">
             <p class="center-align">Length: <pp id="lengthValue"></pp></p>
             <p class="range-field">
               <input type="range" id="lengthSlider" min="1" max="20" step="1" />
