--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="styles.css" />
-    <link rel />
+    <!-- Google Auto Ads -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7816252471679024"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="container">
@@ -78,7 +83,9 @@
             >
           </div>
           <div class="col s3 l2">
-            <a class="waves-effect waves-light btn-large orange darken-2" id="repeatButton"
+            <a
+              class="waves-effect waves-light btn-large orange darken-2"
+              id="repeatButton"
               >Repeat</a
             >
           </div>
